<resources>
    <string name="app_name">Nutrisee</string>

    <!--  search  -->
    <string name="tab_text_search_article">Cari Artikel</string>
    <string name="tab_text_search_product">Cari Produk</string>


    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_scan">Scan</string>
    <string name="title_list">List</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="forgot">Reset Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_page">Forgot Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_nutrisee">Welcome to NutriSee</string>
    <string name="slogan">Choose Smart, Healthy Living with NutriSee</string>
    <string name="scan_button_description">Scan Nutrition Table</string>
    <string name="logout">Logout</string>
</resources>